fix: (chat) fix local message align fix: (chat) fix scrollToBottom on safari

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -692,6 +692,10 @@
         .timestamp {
             text-align: right;
         }
+
+        .chatmessage-wrapper {
+            text-align: right;
+        }
     }
 
     &.error {
